--- a/clouddriver-aws/clouddriver-aws.gradle
+++ b/clouddriver-aws/clouddriver-aws.gradle
@@ -1,6 +1,7 @@
 dependencies {
   compile project(":clouddriver-core")
   compile project(":clouddriver-eureka")
+  compile project(":clouddriver-consul")
 
   spinnaker.group('amazon')
   spinnaker.group('retrofitDefault')
